--- a/app/src/main/res/layout/activity_buscar_responsable_para_patrocinio.xml
+++ b/app/src/main/res/layout/activity_buscar_responsable_para_patrocinio.xml
@@ -29,6 +29,7 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         android:src="@drawable/ic_fab_nuevo_responsable"
-        app:backgroundTint="#212121" />
+        app:backgroundTint="#212121"
+        app:maxImageSize="40dp"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
