--- a/app/src/main/res/layout/content_main_supervisores.xml
+++ b/app/src/main/res/layout/content_main_supervisores.xml
@@ -16,8 +16,8 @@
 
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
 
-    tools:context=".MainActivity"
-    tools:showIn="@layout/activity_main">
+    tools:context=".MainActivitySupervisores"
+    tools:showIn="@layout/activity_main_supervisores">
 
 
     <LinearLayout
