--- a/app/src/main/res/layout/activity_eleccion_repartidores.xml
+++ b/app/src/main/res/layout/activity_eleccion_repartidores.xml
@@ -2,34 +2,29 @@
 <LinearLayout
 
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
 
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+
     tools:context=".EleccionRepartidores">
 
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
+        android:layout_height="wrap_content"
         android:background="#d50000"
         app:popupTheme="@style/AppTheme.PopupOverlay" />
-
-
 
     <GridView
         android:id="@+id/grid"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#FFFF"
-        android:columnWidth="120dp"
-        android:horizontalSpacing="3dp"
-        android:numColumns="auto_fit"
-        android:padding="3dp"
-        android:verticalSpacing="3dp" />
+        android:layout_height="wrap_content"
+        android:numColumns="2"/>
 
 
 </LinearLayout> <!--FIN DEL activity_eleccion_repartidores.xml -->
