--- a/app/src/main/res/layout/activity_entrega_retiro_envases_patrocinio.xml
+++ b/app/src/main/res/layout/activity_entrega_retiro_envases_patrocinio.xml
@@ -44,7 +44,8 @@
             android:layout_margin="@dimen/fab_margin"
             android:src="@mipmap/camion_entrega_retiro_512px"
             app:backgroundTint="#ffa726"
-            android:visibility="invisible"/>
+            android:visibility="invisible"
+            app:maxImageSize="40dp" />
 
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -56,7 +57,8 @@
             android:onClick="CancelarNuevaVuelta"
             android:src="@drawable/ic_menos_tanda"
             android:visibility="gone"
-            app:backgroundTint="#263238"/>
+            app:backgroundTint="#263238"
+            app:maxImageSize="40dp" />
 
 
     </LinearLayout>
