--- a/app/src/main/res/layout/activity_mapa_repartidores.xml
+++ b/app/src/main/res/layout/activity_mapa_repartidores.xml
@@ -27,4 +27,16 @@
     <include layout="@layout/content_mapa_repartidores" />
 
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/back_to_camera_tracking_mode"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
+        app:backgroundTint="#FFFF"
+        app:srcCompat="@drawable/ic_fab_ubicacion_actual" />
+
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
