--- a/app/src/main/res/layout/content_datos_personales_responsable.xml
+++ b/app/src/main/res/layout/content_datos_personales_responsable.xml
@@ -53,7 +53,7 @@
 
                 <View
 
-                    android:id="@+id/separador_menu"
+                    android:id="@+id/separador"
                     android:layout_width="1dp"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="10dp"
