--- a/app/src/main/res/layout/content_mapa_repartidores.xml
+++ b/app/src/main/res/layout/content_mapa_repartidores.xml
@@ -17,12 +17,13 @@
 
     <Button
 
-        android:id="@+id/btn_comenzar_reparto"
+        android:id="@+id/btn_draw_polyline"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Comenzar ruta de reparto"
         android:background="@color/mapboxGrayLight"
-        android:enabled="false"/>
+        android:enabled="false"
+        android:clickable="true"/>
 
 
     <com.mapbox.mapboxsdk.maps.MapView
