--- a/app/src/main/res/layout/grid_item_repartidores.xml
+++ b/app/src/main/res/layout/grid_item_repartidores.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
     android:layout_width="match_parent"
     android:layout_height="300dp">
@@ -12,8 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:transitionName="@string/nombre_transicion_imagen"/>
-
+        android:transitionName="@string/nombre_transicion_imagen" />
 
 
     <TextView
@@ -27,9 +25,6 @@
         android:padding="16dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
         android:textColor="@android:color/white" />
-
-
-
 
 
 </FrameLayout>
