--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,13 +5,12 @@
     <color name="colorAccent">#80deea</color>
 
 
-
+    <!-- Colores para los cursores de los EditText -->
     <color name="colorCursorSupervisores">#ff9100</color>
+    <color name="colorCursorNuevoEvento">#ffff</color>
 
 
-    <color name="colorCursorSupervisoresNuevoEvento">#ffff</color>
-
-
+    <!-- Colores para los mapas -->
     <color name="mapboxWhite">#ffffff</color>
     <color name="mapboxBlue">#4264fb</color>
     <color name="mapboxGrayLight">#c6d2e1</color>
