--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
@@ -20,14 +20,40 @@
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
 
-    <style name="AppTheme.Cursor" parent="AppTheme">
+    <!--Color del cursor del EditText si el usuario se loguea como SUPERVISOR -->
+    <style name="AppTheme.CursorSupervisor" parent="AppTheme">
         <item name="colorAccent">#ff9100</item>
+    </style>
+
+    <!--Color del cursor del EditText si el usuario se loguea como REPARTIDOR -->
+    <style name="AppTheme.CursorRepartidor" parent="AppTheme">
+        <item name="colorAccent">#80deea</item>
     </style>
 
 
     <style name="AppTheme.CursorNuevoEvento" parent="AppTheme">
         <item name="colorAccent">#ffff</item>
     </style>
+
+
+
+    <!-- Cambio de colores del Calendario (DatePicker) -->
+
+    <style name="MyDatePickerStyleSupervisoresNuevoEvento" parent="Theme.AppCompat.Light.Dialog">
+        <item name="colorAccent">#D50000</item>
+    </style>
+
+
+    <style name="MyDatePickerStyleRepartidoresNuevoEvento" parent="Theme.AppCompat.Light.Dialog">
+        <item name="colorAccent">#0d47a1</item>
+    </style>
+
+    <style name="MyDatePickerStyleRepartidoresNuevoResponsable" parent="Theme.AppCompat.Light.Dialog">
+        <item name="colorAccent"> #311b92</item>
+    </style>
+
+
+
 
 
     <style name="NavigationMapRoute">
@@ -49,7 +75,6 @@
         <item name="navigationViewSecondary">@color/mapboxBlue</item>
         <item name="navigationViewAccent">@color/mapboxPink</item>
     </style>
-
 
     <style name="MyCustomTheme" parent="NavigationViewLight">
         <item name="navigationViewPrimary">
