--- a/app/src/main/res/layout/activity_nuevo_responsable_patrocinio.xml
+++ b/app/src/main/res/layout/activity_nuevo_responsable_patrocinio.xml
@@ -551,7 +551,7 @@
                         android:layout_weight="1"
                         android:gravity="center"
                         android:hint="(Obligatorio)"
-                        android:inputType="textMultiLine"
+                        android:inputType="textCapSentences|textMultiLine"
                         android:maxLength="150"
                         android:textSize="20sp"
                         android:textStyle="bold"
@@ -622,7 +622,7 @@
                         android:layout_weight="1"
                         android:gravity="center"
                         android:hint="(Obligatorio)"
-                        android:inputType="textMultiLine"
+                        android:inputType="textCapSentences|textMultiLine"
                         android:maxLength="100"
                         android:textSize="20sp"
                         android:textStyle="bold"
@@ -768,7 +768,7 @@
                         android:layout_weight="1"
                         android:gravity="center"
                         android:hint="(Obligatorio)"
-                        android:inputType="textMultiLine"
+                        android:inputType="textCapSentences|textMultiLine"
                         android:maxLength="150"
                         android:textSize="20sp"
                         android:textStyle="bold"
@@ -929,7 +929,7 @@
                         android:layout_weight="1"
                         android:gravity="center"
                         android:hint="(Obligatorio)"
-                        android:inputType="textMultiLine"
+                        android:inputType="textCapSentences|textMultiLine"
                         android:maxLength="100"
                         android:textSize="20sp"
                         android:textStyle="bold"
@@ -1005,7 +1005,7 @@
                         android:layout_weight="1"
                         android:gravity="center"
                         android:hint="(Obligatorio)"
-                        android:inputType="textMultiLine"
+                        android:inputType="textCapSentences|textMultiLine"
                         android:maxLength="150"
                         android:textSize="20sp"
                         android:textStyle="bold"
@@ -1078,7 +1078,7 @@
                         android:layout_weight="1"
                         android:gravity="center"
                         android:hint="(Obligatorio)"
-                        android:inputType="textMultiLine"
+                        android:inputType="textCapSentences|textMultiLine"
                         android:maxLength="100"
                         android:textSize="20sp"
                         android:textStyle="bold"
@@ -1154,7 +1154,7 @@
                         android:layout_weight="1"
                         android:gravity="center"
                         android:hint="(Obligatorio)"
-                        android:inputType="textMultiLine"
+                        android:inputType="textCapSentences|textMultiLine"
                         android:maxLength="150"
                         android:textSize="20sp"
                         android:textStyle="bold"
