--- a/app/src/main/res/layout/list_nombres_responsables_item.xml
+++ b/app/src/main/res/layout/list_nombres_responsables_item.xml
@@ -1,24 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-
-    xmlns:android="http://schemas.android.com/apk/res/android"
-
-    android:orientation="vertical"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/llh_contenedor_lv"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="40dp"
+    android:orientation="horizontal">
 
-
-
-
-    <!-- Codigofgfg de Proyecto  -->
-    <TextView android:id="@+id/codigo_token"
-        android:layout_width="fill_parent"
+    <TextView
+        android:id="@+id/txtName"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="10dip"
-        android:textSize="16dip"
-        android:textStyle="bold"/>
+        android:layout_gravity="center"
+        android:layout_marginLeft="5dp"
+        android:textSize="18sp" />
 
-
-
+    <TextView
+        android:id="@+id/txtApellido"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="0dp"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
 </LinearLayout>
